# events-face

./: .gitignore  pyproject.toml
src/: db.sqlite3  urls.py
src/core/: settings.py
src/events/: admin.py  models.py  serializers.py  urls.py  views.py
src/events/migrations/: 0001_initial.py  0002_event_changed_at_registration.py  0003_event_registration_deadline.py  0004_notificationoutbox.py  0005_rename_notificationoutbox_outboxmessage.py
src/sync/: models.py
src/sync/management/commands/: delete_old_events.py  run_outbox_worker.py  sync_events.py
src/sync/migrations/: 0001_initial.py
src/users_auth/: apps.py  serializers.py  urls.py  views.py
